@@ -1,0 +1,11 @@
+/*
+ * OSHUKA: This header file contains all string related functions.
+ */
+#ifndef __STRING_H__
+#define __STRING_H__
+
+#include <types.h>
+
+size_t strlen(const char* str);
+
+#endif /* __STRING_H__ */
