@@ -1,0 +1,11 @@
+
+#include <string.h>
+
+size_t strlen(const char* str)
+{
+    size_t len = 0;
+    while (str[len]) {
+        len++;
+    }
+    return len;
+}
